# semantic-dict-sheaf

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.conf/hydra/classifier/: train_classifier.yaml
.conf/hydra/dataset/: create_latents.yaml
.conf/hydra/network/: CF_both_both_splitted.yaml  CF_both_both_splitted_dict_reg.yaml  CF_both_dict_splitted_sparse_omp.yaml  GD_both.yaml  GD_dict_both_splitted.yaml  GD_dict_dict_splitted.yaml  GD_sparse_dict_splitted.yaml  local_pca.yaml  sheaf_learn.yaml  test.yaml  toy_example.yaml
.conf/hydra/test/: sheaf_learn.yaml
.conf/hydra/visualization/: global_dict.yaml  graph.yaml  local_pca.yaml
.conf/plotting/: plt.mplstyle
results/: align_metrics_CF_both_both_splitted_10_learnable_1_1_42.parquet  align_metrics_CF_both_both_splitted_200_learnable_1_1_42.parquet  align_metrics_GD_dict_both_splitted_100.0_learnable_1_1_42.parquet  align_metrics_GD_dict_both_splitted_200.0_learnable_1_1_42.parquet  align_metrics_GD_dict_both_splitted_20_learnable_1_1_42.parquet  alignment_metrics_CF_both_both_splitted_100_learnable_1_1_sampling_strategy_proto_42.parquet  alignment_metrics_CF_both_both_splitted_10_learnable_1_1_sampling_strategy_proto_42.parquet  alignment_metrics_CF_both_both_splitted_1_1_learnable_sampling_strategy_proto_42.parquet  alignment_metrics_CF_both_both_splitted_1_learnable_1_1_sampling_strategy_proto_42.parquet  alignment_metrics_CF_both_both_splitted_200_1_learnable_sampling_strategy_proto_42.parquet  alignment_metrics_CF_both_both_splitted_200_learnable_1_1_sampling_strategy_proto_42.parquet  alignment_metrics_CF_both_both_splitted_300_learnable_1_1_sampling_strategy_proto_42.parquet  alignment_metrics_CF_both_both_splitted_50_learnable_1_1_sampling_strategy_proto_42.parquet  alignment_metrics_CF_both_both_splitted_80_learnable_1_1_sampling_strategy_proto_42.parquet  alignment_metrics_CF_both_both_splitted_dict_reg_0.01_1_learnable_sampling_strategy_proto_42.parquet  alignment_metrics_CF_both_both_splitted_dict_reg_0.1_1_learnable_sampling_strategy_proto_42.parquet  alignment_metrics_CF_both_both_splitted_dict_reg_10.0_1_learnable_sampling_strategy_proto_42.parquet  alignment_metrics_CF_both_both_splitted_dict_reg_100.0_1_learnable_sampling_strategy_proto_42.parquet  alignment_metrics_CF_both_both_splitted_dict_reg_1_1_learnable_sampling_strategy_proto_42.parquet  alignment_metrics_CF_both_both_splitted_dict_reg_200_1_learnable_sampling_strategy_proto_42.parquet  alignment_metrics_CF_both_both_splitted_dict_reg_300.0_1_learnable_sampling_strategy_proto_42.parquet  alignment_metrics_local_pca_0.5_local_pca_42.parquet  alignment_metrics_local_pca_0.6_local_pca_42.parquet  alignment_metrics_local_pca_0.7_local_pca_42.parquet  alignment_metrics_local_pca_0.8_local_pca_42.parquet  alignment_metrics_local_pca_0.9_local_pca_42.parquet  dict_metrics_5e-05_learnable_example_1_100_42.parquet  dict_metrics_CF_both_both_splitted_0.0001_learnable_1_1_42.parquet  dict_metrics_CF_both_both_splitted_0.001_learnable_1_1_42.parquet  dict_metrics_CF_both_both_splitted_0.005_learnable_1_1_42.parquet  dict_metrics_CF_both_both_splitted_0.01_learnable_1_1_42.parquet  dict_metrics_CF_both_both_splitted_0.05_learnable_1_1_42.parquet  dict_metrics_CF_both_both_splitted_0.1_learnable_1_1_42.parquet  dict_metrics_CF_both_both_splitted_0.5_learnable_1_1_42.parquet  dict_metrics_CF_both_both_splitted_1.0_learnable_1_1_42.parquet  dict_metrics_CF_both_both_splitted_10.0_learnable_1_1_42.parquet  dict_metrics_CF_both_both_splitted_100.0_learnable_1_1_42.parquet  dict_metrics_CF_both_both_splitted_1000.0_learnable_1_1_42.parquet  dict_metrics_CF_both_both_splitted_10000.0_learnable_1_1_42.parquet  dict_metrics_CF_both_both_splitted_100000.0_learnable_1_1_42.parquet  (+42 more)
results/old/: dict_metrics_0.01_learnable_CF_both_both_splitted_1_1_42.parquet  dict_metrics_5e-05_learnable_GD_dict_both_splitted_1_100_42.parquet  dict_metrics_CF_both_both_splitted_0.0001_learnable_1_1_42.parquet  dict_metrics_CF_both_both_splitted_0.001_learnable_1_1_42.parquet  dict_metrics_CF_both_both_splitted_100.0_learnable_1_1_42.parquet  dict_metrics_CF_both_both_splitted_1000000.0_learnable_1_1_42.parquet  dict_metrics_CF_both_both_splitted_1_learnable_1_1_42.parquet  dict_metrics_CF_both_both_splitted_1e-05_learnable_1_1_42.parquet  dict_metrics_CF_both_both_splitted_1e-06_learnable_1_1_42.parquet  dict_metrics_CF_both_both_splitted_20.0_learnable_1_1_42.parquet  dict_metrics_CF_both_both_splitted_30.0_learnable_1_1_42.parquet  dict_metrics_CF_both_both_splitted_5.0_learnable_1_1_42.parquet  dict_metrics_CF_both_both_splitted_500.0_learnable_1_1_42.parquet  dict_metrics_CF_both_both_splitted_5000.0_learnable_1_1_42.parquet  dict_metrics_CF_both_both_splitted_5_learnable_1_1_42.parquet  dict_metrics_CF_both_both_splitted_80.0_learnable_1_1_42.parquet  dict_metrics_GD_dict_both_splitted_80.0_learnable_1_1_42.parquet
scripts/: compute_images.py  create_latents.py  feasible_models.py  graph_plot.py  sheaf_learn.py  sheaf_learn_old.py  sheaf_learn_parallel.py  sheaf_learn_simple.py  test_frame_potential.py  test_parquet.py  tmp.py  train_classifier.py  utils.py  visualize.py  wandb_downloader.py
src/: __init__.py  coder.py  datamodules.py  download_utils.py  linear.py  neural.py  problems.py  sheaf.py  test.py  utils.py  visualize.py
