[project]
name = "semantic-network-formation-sheaves"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "attrs==25.3.0",
    "beautifulsoup4==4.13.4",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "docker-pycreds==0.4.0",
    "filelock==3.18.0",
    "frozenlist==1.6.0",
    "fsspec==2025.3.2",
    "gdown==5.2.0",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "hydra-core==1.3.2",
    "idna==3.10",
    "igraph==0.11.8",
    "jinja2==3.1.6",
    "joblib==1.4.2",
    "lightning-utilities==0.14.3",
    "markupsafe==3.0.2",
    "mpmath==1.3.0",
    "multidict==6.4.3",
    "networkx==3.4.2",
    "numpy==2.2.5",
    "nvidia-cublas-cu12==12.6.4.1 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-cupti-cu12==12.6.80 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-nvrtc-cu12==12.6.77 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-runtime-cu12==12.6.77 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cudnn-cu12==9.5.1.17 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cufft-cu12==11.3.0.4 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cufile-cu12==1.11.1.6 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-curand-cu12==10.3.7.77 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusolver-cu12==11.7.1.2 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusparse-cu12==12.5.4.2 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusparselt-cu12==0.6.3 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nccl-cu12==2.26.2 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvjitlink-cu12==12.6.85 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvtx-cu12==12.6.77 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "omegaconf==2.3.0",
    "packaging==25.0",
    "platformdirs==4.3.7",
    "propcache==0.3.1",
    "protobuf==6.30.2",
    "psutil==7.0.0",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "pysocks==1.7.1",
    "python-dotenv==1.1.0",
    "pytorch-lightning==2.5.1.post0",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "sentry-sdk==2.27.0",
    "setproctitle==1.3.6",
    "setuptools==80.1.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "soupsieve==2.7",
    "sympy==1.14.0",
    "texttable==1.7.0",
    "threadpoolctl==3.6.0",
    "torch==2.7.0",
    "torchmetrics==1.7.1",
    "tqdm==4.67.1",
    "triton==3.3.0 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "urllib3==2.4.0",
    "wandb==0.19.10",
    "yarl==1.20.0",
]

[tool.ruff]
target-version = "py310"
line-length = 79

[tool.ruff.lint]
extend-select = [
        "C4",
        "SIM",
        "UP",
        "TCH",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
